# ANUBIS

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
anubis_ws/myenv/: pyvenv.cfg
anubis_ws/src/Arm/: package.xml  setup.cfg  setup.py
anubis_ws/src/Arm/Arm/: ArmHardwareNode.py
anubis_ws/src/Arm/src/: ArmHardwareNode.py
anubis_ws/src/arm/: CMakeLists.txt  package.xml  setup.py
anubis_ws/src/arm/arm/: ArmHardwareNode.py
anubis_ws/src/arm/launch/: arm.launch.py  arm_hardware.launch.py
anubis_ws/src/arm/src/: arm_hardware_node.cpp  arm_joy_control_node.cpp  arm_joy_control_node_noik  arm_joy_control_node_noik.cpp  cancoder.cpp  cancoder.hpp  encoder.cpp  encoder.hpp  motor.cpp  motor.hpp
anubis_ws/src/astro_image_tools/: CMakeLists.txt  package.xml
anubis_ws/src/astro_image_tools/launch/: ffmpeg_decode.launch.py  ffmpeg_encoder.launch.py  ffmpeg_stream.launch.py  republish.launch.py
anubis_ws/src/astro_msgs/: CMakeLists.txt  package.xml
anubis_ws/src/astro_msgs/msg/: MotorControl.msg  MotorTelemetry.msg
anubis_ws/src/camera_streamer/camera_streamer/: usb_camera_streamer_param.py
anubis_ws/src/camera_streamer/launch/: camera.launch.py
anubis_ws/src/distributor/: CMakeLists.txt  package.xml
anubis_ws/src/distributor/include/: distributorconfig.yaml  map.h  settings.h
anubis_ws/src/distributor/launch/: motor_distributor_launch.py
anubis_ws/src/distributor/src/: distributor.cpp
anubis_ws/src/drive/: CMakeLists.txt  package.xml
anubis_ws/src/drive/launch/: drive.launch.py  reaper_drive.launch.py
anubis_ws/src/drive/src/: drive_node.cpp  motor.cpp  motor.hpp
anubis_ws/src/launch_package/: CMakeLists.txt  package.xml
anubis_ws/src/launch_package/launch/: launch_robot.launch.py  launch_webcam_v4l2.launch.py
anubis_ws/src/launch_robot/: CMakeLists.txt  package.xml
anubis_ws/src/launch_robot/launch/: robot.launch.py
anubis_ws/src/motor_control/: CMakeLists.txt  package.xml
anubis_ws/src/motor_control/config/: kraken_params.yaml  spark_params.yaml
anubis_ws/src/motor_control/include/motor_control/: SparkBase.hpp  SparkMax.hpp  kraken_controller.hpp  motor_controller_base.hpp  sim_motor_controller.hpp  sparkmax_controller.hpp
anubis_ws/src/motor_control/launch/: kraken_control.launch.py  spark_control.launch.py
anubis_ws/src/motor_control/src/: kraken_controller.cpp  kraken_controller_executable.cpp  sim_motor_controller.cpp  sim_motor_controller_executable.cpp  spark_base.cpp  spark_max.cpp  sparkmax_controller.cpp  sparkmax_controller_executable.cpp
anubis_ws/src/motor_messages/: CMakeLists.txt  package.xml
anubis_ws/src/motor_messages/msg/: Command.msg
anubis_ws/src/moveit_servo/config/: braccio.srdf  braccio_simulated_config.yaml  joint_limits.yaml  kinematics.yaml  panda_simulated_config.yaml  servo_parameters.yaml  visual.srdf
anubis_ws/src/moveit_servo/config/urdf/: braccio.urdf  braccio_arm.urdf
anubis_ws/src/moveit_servo/launch/: demo_twist.launch.py
anubis_ws/src/moveit_servo/src/: servo_node.cpp
anubis_ws/src/moveit_servo/src/utils/: common.cpp
anubis_ws/src/navigation/config/: nav2_params.yaml
anubis_ws/src/pose_estimation/: setup.py
anubis_ws/src/pose_estimation/pose_estimation/: aruco_node.py  calibration_manager.py  v4l2_aruco_node.py
anubis_ws/src/pose_estimation/pose_estimation/camera_calibration/: calibration_matrices.yaml
anubis_ws/src/reaper_description/: setup.py
anubis_ws/src/reaper_description/launch/: launch.py
anubis_ws/src/reaper_description/urdf/: URDFassy.urdf
anubis_ws/src/robot_launch/: CMakeLists.txt  package.xml
anubis_ws/src/robot_launch/launch/: reaper.launch.py  robot.launch.py  sampler.launch.py
anubis_ws/src/sampler/: CMakeLists.txt  package.xml
anubis_ws/src/sampler/src/: motor.cpp  motor.hpp  sampler_node.cpp
anubis_ws/src/teleop/: CMakeLists.txt
anubis_ws/src/teleop/src/: arm_teleop_node.cpp  teleop_node.cpp
anubis_ws/src/ukf_launch/config/: ukf_config.yaml
anubis_ws/src/ukf_launch/launch/: ukf.launch.py
anubis_ws/src/web_video_server/src/: libav_streamer.cpp
anubis_ws/src/yolo_perception/: package.xml  setup.cfg  setup.py
anubis_ws/src/yolo_perception/yolo_perception/: yolo_webcam.py
build_scripts/: build.sh  build_debug.sh
deploy/: deploy_to_robot.sh
install/: local_setup.sh  setup.sh
install/motor_control/share/motor_control/: local_setup.sh  package.sh
install/motor_control/share/motor_control/cmake/: motor_controlConfig.cmake
install/motor_messages/share/motor_messages/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motor_messages/share/motor_messages/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_motor_messages__rosidl_generator_cExport-noconfig.cmake  export_motor_messages__rosidl_generator_cExport.cmake  export_motor_messages__rosidl_generator_cppExport.cmake  export_motor_messages__rosidl_generator_pyExport-noconfig.cmake  export_motor_messages__rosidl_generator_pyExport.cmake  export_motor_messages__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_motor_messages__rosidl_typesupport_fastrtps_cExport.cmake  export_motor_messages__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_motor_messages__rosidl_typesupport_fastrtps_cppExport.cmake  motor_messagesConfig.cmake  motor_messages__rosidl_typesupport_cExport-noconfig.cmake  motor_messages__rosidl_typesupport_cExport.cmake  motor_messages__rosidl_typesupport_cppExport-noconfig.cmake  motor_messages__rosidl_typesupport_cppExport.cmake  motor_messages__rosidl_typesupport_introspection_cExport-noconfig.cmake  (+6 more)
launch_scripts/: 99-anubis-udev.rules  can_startup.sh  install_UDEV.sh
log/: latest_build
(+68 files in other folders)
