cmake_minimum_required(VERSION 3.8)
project(drive)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(motor_messages REQUIRED)
find_package(motor_control REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)

add_executable(drive_node src/drive_node.cpp)

ament_target_dependencies(drive_node
  rclcpp
  geometry_msgs
  std_msgs
  nav_msgs
  sensor_msgs
  motor_messages
  motor_control
  tf2
  tf2_geometry_msgs
)

target_link_libraries(drive_node motor_control::motor_control_nodes)

install(TARGETS drive_node
  DESTINATION lib/${PROJECT_NAME}
)

install(DIRECTORY launch
  DESTINATION share/${PROJECT_NAME}/
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
